--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -14,6 +14,7 @@
     "code-fold: true\n",
     "format:\n",
     "  html:\n",
+    "    page-layout: article\n",
     "    embed-resources: true\n",
     "bibliography: \"references.bib\"\n",
     "---"
@@ -24,10 +25,27 @@
    "metadata": {},
    "source": [
     "## Data Source & Description \n",
-    "**Source:**\n",
-    "The data for this analysis was sourced from the Aid Worker Security Database [@aidworkersecurity].\n",
     "\n",
-    "unit of analysis = \n",
+    "**Source:**\n",
+    "The data for this analysis was sourced from the Aid Worker Security Database [@aidworkersecurity], a global repository of verified reports on major security incidents affecting aid workers..\n",
+    "\n",
+    "**Unit of Analysis:** Each row represents a single, verified incident involving violence against humanitarian aid workers.\n",
+    "\n",
+    "**Coverage:**\n",
+    "The data includes killings, kidnappings, and serious injuries sustained by humanitarian personnel from 1997 onward. Victims include national and international staff working for NGOs, UN agencies, and Red Cross/Crescent movements.\n",
+    "\n",
+    "**Data Collection Methodology:**\n",
+    "AWSD compiles data through systematic media scraping, direct reports from humanitarian organizations, and field-level security consortia. All records are verified annually with relevant agencies.\n",
+    "\n",
+    "**Notes on Confidentiality:**\n",
+    "Victim and agency names are withheld to protect privacy and encourage transparent reporting. Only broad institutional categories are retained.\n",
+    "\n",
+    "**Geospatial Precision:**\n",
+    "Most incidents are geocoded using open-source mapping services. When precise coordinates are unavailable, approximate central points are used.\n",
+    "\n",
+    "**Citation**:\n",
+    "All analysis using this data should cite: Humanitarian Outcomes. Aid Worker Security Database. 2025 [@aidworkersecurity]. \n",
+    "\n",
     "## Load and Preview Data"
    ]
   },
@@ -463,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +539,7 @@
    "source": [
     "print(\n",
     "    \"Number of rows:\", df.shape[0], \"\\n\\nMissing Data: \"\n",
-    ")  #  # Understanding the total count helps in assessing the impact of missing values and evaluating the significance of data removal decisions.\n",
+    ")  # Understanding the total count helps in assessing the impact of missing values and evaluating the significance of data removal decisions.\n",
     "na_counts = df.isna().sum()\n",
     "print(na_counts)"
    ]
