--- a/references.bib
+++ b/references.bib
@@ -65,3 +65,43 @@
   url          = {https://www.ibtimes.co.uk/south-sudan-parliament-passes-bill-limiting-foreign-aid-workers-amid-humanitarian-crisis-1542128#slideshow/1487482},
   note         = {Photo by ICRC (2016)}
 }
+
+@misc{posit_dashboard_2023,
+  author       = {Posit PBC},
+  title        = {Quarto Dashboards | Charles Teague | Posit},
+  year         = {2023},
+  month        = {December}, 
+  day          = {7},
+  url          = {https://www.youtube.com/watch?v=_VGJIPRGTy4&ab_channel=PositPBC},
+  publisher    = {YouTube},
+}
+
+@misc{posit_airbnb_2024,
+  author       = {Posit PBC},
+  title        = {Real-World Python Dashboard Project w/ Quarto! (Airbnb Review Analysis)},
+  year         = {2024},
+  day          = {20},
+  month        = {December},
+  url          = {https://www.youtube.com/watch?v=gCLCn4TVlWo&ab_channel=PositPBC},
+  note         = {YouTube video, accessed April 4, 2025},
+  publisher    = {YouTube}
+}
+
+@online{menghanibhanvi_folium_2020,
+  author       = {Menghanibhanvi},
+  title        = {Folium: All You Need for Map Visualization},
+  year         = {2020},
+  month        = {August},
+  day          = {26},
+  url          = {https://menghanibhanvi.medium.com/folium-all-you-need-for-map-visualization-206e88c8ac},
+  note         = {Medium article, accessed April 2, 2025},
+  publisher    = {Medium}
+}
+
+@online{colormagic_igor_palette,
+  author       = {{ColorMagic}},
+  title        = {Igor Color Palette},
+  year         = {2025},
+  url          = {https://colormagic.app/palette/671c38d353d1e2a13ca7ee06},
+  note         = {Accessed April 7, 2025}
+}
