added name and github link

--- a/analysis.qmd
+++ b/analysis.qmd
@@ -6,7 +6,7 @@ format:
     toc: true
     toc-location: right
     toc-depth: 4
-author: "crg123"
+author: "Courtney Green"
 sidebar: false
 date: "2025-04-07"
 code-fold: true
