--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -8,7 +8,7 @@
     "title: \"Data Cleaning\"\n",
     "bread-crumbs: true\n",
     "sidebar: false\n",
-    "author: \"crg123\"\n",
+    "author: \"Courtney Green\"\n",
     "date: \"2025-04-07\"\n",
     "toc: true\n",
     "code-fold: true\n",
